@@ -63,6 +63,8 @@ Core and Builtins
 Library
 -------
 
+- logging: added "handler of last resort". See http://bit.ly/last-resort-handler
+
 - test.support: Added TestHandler and Matcher classes for better support of
   assertions about logging.
 
